# SecureGist

./: CONTRIBUTING.md  DEPLOYMENT.md  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: build-images.yml  deploy-frontend.yml
backend/: Dockerfile  README.md  pyproject.toml  securegist.postman_collection.json
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 20260405_0001_initial.py
backend/src/: api.py  crud.py  db.py  dependencies.py  main.py  models.py  run_migrations.py  schemas.py  storage.py
backend/tests/: conftest.py  test_api.py  test_schemas.py
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  config.ts  index.css  main.tsx
frontend/src/components/: Gist.tsx  Home.tsx
frontend/src/lib/: crypto.test.ts  crypto.ts  gist-utils.test.ts  gist-utils.ts
helm/securegist/: Chart.yaml  README.md  values-dev.yaml  values-prod.yaml  values.yaml
helm/securegist/charts/backend/: Chart.yaml  values.yaml
helm/securegist/charts/backend/templates/: _helpers.tpl  deployment.yaml
helm/securegist/charts/frontend/: Chart.yaml  values.yaml
helm/securegist/charts/frontend/templates/: _helpers.tpl  deployment.yaml
helm/securegist/templates/: _helpers.tpl  ingress.yaml  middlewares.yaml
